--- a/public/index.html
+++ b/public/index.html
@@ -1,43 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+<head>
+  <title>InShock Design</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <style>
+    body {
+      max-width: 1200px;
+      margin: 0 auto;
+    }
+    .w3-row-padding {
+      margin: 8px -16px;
+    }
+    .w3-half {
+      float: left;
+      width: 50%;
+      padding: 8px;
+    }
+    .w3-text-light-grey {
+      color: #888;
+    }
+  </style>
+</head>
+<body class="w3-content">
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+<div class="w3-panel">
+  <i class="w3-xlarge fa fa-bars"></i>
+</div>
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+<!-- First Grid: Logo & About -->
+<div class="w3-row">
+  <div class="w3-half w3-container">
+    <h1 class="w3-xxlarge w3-text-light-grey">Hello</h1>
+    <h1 class="w3-xxlarge w3-text-grey">We are</h1>
+    <h1 class="w3-jumbo">InShock</h1>
+  </div>
+  <div class="w3-half w3-container w3-xlarge w3-text-grey">
+    <p>We build design teams - we break things down and build them better - we deliver the best solutions</p>
+    <p>InShock means powerful simplicity</p>
+  </div>
+</div>
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-  </body>
+<!-- Second Grid: Recent Work -->
+<div class="w3-row w3-row-padding">
+  <div class="w3-half w3-container">
+    <img src="https://www.w3schools.com/w3images/house1.jpg" style="width:100%">
+  </div>
+  <div class="w3-half w3-container">
+    <img src="https://www.w3schools.com/w3images/house_arch.jpg" style="width:100%">
+    <p class="w3-xlarge w3-text-grey">
+      Our expertise includes: Demos, Logos, Reports, Names, Events, Media, WordPress, Google, Books, and Optimizations.
+    </p>
+  </div>
+</div>
+
+<!-- Footer -->
+<div class="w3-row w3-section">
+  <div class="w3-third w3-container w3-black w3-large" style="height:250px">
+    <h2>Contact Info</h2>
+    <p><i class="fa fa-map-marker" style="width:30px"></i> Chicago, US</p>
+    <p><i class="fa fa-phone" style="width:30px"></i> Phone: +00 151515</p>
+    <p><i class="fa fa-envelope" style="width:30px"></i> Email: Inshock@gmail.com</p>
+  </div>
+  <div class="w3-third w3-center w3-large w3-dark-grey w3-text-white" style="height:250px">
+    <h2>Contact Us</h2>
+    <p>If you have an idea.</p>
+    <p>What are you waiting for?</p>
+  </div>
+  <div class="w3-third w3-center w3-large w3-grey w3-text-white" style="height:250px">
+    <h2>Like Us</h2>
+    <i class="w3-xlarge fa fa-facebook-official"></i><br>
+    <i class="w3-xlarge fa fa-pinterest-p"></i><br>
+    <i class="w3-xlarge fa fa-twitter"></i><br>
+    <i class="w3-xlarge fa fa-flickr"></i><br>
+    <i class="w3-xlarge fa fa-linkedin"></i>
+  </div>
+</div>
+
+<div class="w3-container w3-text-grey">
+  <p> <a href="" target="_blank"></a></p>
+</div>
+
+</body>
 </html>
