--- a/public/index.html
+++ b/public/index.html
@@ -10,11 +10,13 @@
     body {
       max-width: 1200px;
       margin: 0 auto;
+      
     }
     .w3-row-padding {
       margin: 8px -16px;
     }
     .w3-half {
+      font-weight: bold;
       float: left;
       width: 50%;
       padding: 8px;
@@ -22,6 +24,117 @@
     .w3-text-light-grey {
       color: #888;
     }
+
+    body {
+  font-family: 'Your Chosen Font', sans-serif !important;
+  line-height: 1.6;
+  color: #333;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+/* Header Styles */
+.w3-panel {
+  text-align: right;
+  padding: 16px;
+}
+
+/* First Grid Styles */
+.w3-row {
+  display: flex;
+}
+
+.w3-half {
+  flex: 1;
+  padding: 20px;
+}
+
+
+
+.w3-container p {
+  margin: 10px 0;
+  color: #555;
+}
+
+/* Second Grid Styles */
+.w3-row-padding img {
+  width: 100%;
+  border-radius: 4px;
+  margin-top: 16px;
+}
+
+/* Footer Styles */
+.w3-section {
+  display: flex;
+  justify-content: space-between;
+  align-items: stretch;
+  margin-top: 20px;
+}
+
+
+
+.w3-third h2 {
+  color: #fff;
+}
+
+.w3-text-white {
+  color: #fff;
+}
+
+.w3-dark-grey {
+  background-color: #333;
+  color: #fff;
+}
+
+/* Contact Form Styles */
+.w3-large {
+  margin-top: 16px;
+}
+
+.w3-input {
+  width: 100%;
+  padding: 12px;
+  margin-bottom: 16px;
+  border: 1px solid #ccc;
+  
+}
+
+.w3-input:focus {
+  outline: none;
+  border: 1px solid #555;
+}
+
+.w3-button {
+  background-color: #333;
+  color: #fff !important;
+  padding: 12px 20px;
+  border: none;
+ 
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.w3-button:hover {
+  background-color: #555;
+}
+
+/* Social Icons Styles */
+.w3-xlarge.fa {
+
+  color: #333;
+  transition: color 0.3s;
+}
+
+.w3-xlarge.fa:hover {
+  color: #555;
+}
+
+h1, .w3-xxlarge, .w3-text-light-grey {
+  font-weight: bold !important; 
+}
+/* Additional Custom Styles */
+/* Add your own custom styles here */
+
   </style>
 </head>
 <body class="w3-content">
