--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,72 @@
     .w3-text-light-grey {
       color: #888;
     }
+
+    /* Second Grid Styles */
+.w3-row-padding img {
+  width: 100%;
+  border-radius: 4px;
+  margin-top: 16px;
+}
+
+.w3-content {
+  display:
+}
+
+
+
+
+.w3-third h2 {
+  color: #fff;
+}
+
+.w3-text-white {
+  color: #fff;
+}
+
+.w3-dark-grey {
+  background-color: #333;
+  color: #fff;
+}
+
+/* Contact Form Styles */
+.w3-large {
+  margin-top: 16px;
+}
+
+.w3-input {
+  width: 100%;
+  padding: 12px;
+  margin-bottom: 16px;
+  border: 1px solid #ccc;
+  
+}
+
+.w3-input:focus {
+  outline: none;
+  border: 1px solid #555;
+}
+
+.w3-button {
+  background-color: #333;
+  color: #fff !important;
+  padding: 12px 20px;
+  border: none;
+ 
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.w3-button:hover {
+  
+}
+
+
+
+
+h1, .w3-xxlarge, .w3-text-light-grey {
+  font-weight: bold !important; 
+}
   </style>
 </head>
 <body class="w3-content">
