--- a/public/index.html
+++ b/public/index.html
@@ -82,11 +82,16 @@
   
 }
 
-
-
-
+.w3-text-light-grey, .w3-hover-text-light-grey:hover, .w3-text-light-gray, .w3-hover-text-light-gray:hover {
+    color: #fff4f4!important;
+}
 h1, .w3-xxlarge, .w3-text-light-grey {
   font-weight: bold !important; 
+}
+
+h2 { 
+  font-family: Helvetica !important;
+  text-align: center !important;
 }
   </style>
 </head>
@@ -104,8 +109,8 @@ h1, .w3-xxlarge, .w3-text-light-grey {
     <h1 class="w3-jumbo">InShock</h1>
   </div>
   <div class="w3-half w3-container w3-xlarge w3-text-grey">
-    <p>We build design teams - we break things down and build them better - we deliver the best solutions</p>
-    <p>InShock means powerful simplicity</p>
+    <p>We break things down and build them better - we deliver the best solutions</p>
+    <p>InShock is powerful simplicity.</p>
   </div>
 </div>
 
