Your commit message here

--- a/public/index.html
+++ b/public/index.html
@@ -93,6 +93,10 @@ h2 {
   font-family: Helvetica !important;
   text-align: center !important;
 }
+
+.w3-text-light-grey, .w3-hover-text-light-grey:hover, .w3-text-light-gray, .w3-hover-text-light-gray:hover {
+    color: #00c19fd4!important;
+}
   </style>
 </head>
 <body class="w3-content">
