Your commit message here

--- a/public/index.html
+++ b/public/index.html
@@ -126,7 +126,7 @@ h2 {
   <div class="w3-half w3-container">
     <img src="https://www.w3schools.com/w3images/house_arch.jpg" style="width:100%">
     <p class="w3-xlarge w3-text-grey">
-      Our expertise includes: Demos, Logos, Reports, Names, Events, Media, WordPress, Google, Books, and Optimizations.
+      Our expertise lies in creating seamless designs that harmonize aesthetics and functionality, ensuring every space is a unique and tailored expression of style.
     </p>
   </div>
 </div>
