mobile responsive text

--- a/public/index.html
+++ b/public/index.html
@@ -33,10 +33,6 @@
 .w3-content {
   display:
 }
-
-
-
-
 .w3-third h2 {
   color: #fff;
 }
@@ -97,6 +93,17 @@ h2 {
 .w3-text-light-grey, .w3-hover-text-light-grey:hover, .w3-text-light-gray, .w3-hover-text-light-gray:hover {
     color: #00c19fd4!important;
 }
+@media (max-width: 600px) {
+  /* Styles for very small screens */
+
+  body {
+    font-size: 40px; /* Adjust font size for very small screens */
+  }
+
+  /* Additional styles for very small screens */
+}
+
+
   </style>
 </head>
 <body class="w3-content">
