--- a/public/index.html
+++ b/public/index.html
@@ -93,16 +93,14 @@ h2 {
 .w3-text-light-grey, .w3-hover-text-light-grey:hover, .w3-text-light-gray, .w3-hover-text-light-gray:hover {
     color: #00c19fd4!important;
 }
-@media (max-width: 600px) {
-  /* Styles for very small screens */
-
-  body {
-    font-size: 40px; /* Adjust font size for very small screens */
+@media (max-width: 400px) {
+    p, p.w3-xlarge.w3-text-grey {
+    font-size: 14.5px !important;
+    
   }
 
+  }
   /* Additional styles for very small screens */
-}
-
 
   </style>
 </head>
